@@ -375,14 +375,16 @@ void spline_coef(int *method, int *n, double *x, double *y, double *b, double *c
 void spline_eval(int *method, int *nu, double *u, double *v, int *n, double *x, double *y, double *b, double *c,
                  double *d)
 {
-    /* Evaluate  v[l] := spline(u[l], ...),  l = 1,..,nu */
-
+    /* Evaluate  v[l] := spline(u[l], ...),	    l = 1,..,nu, i.e. 0:(nu-1)
+     * Nodes x[i], coef (y[i]; b[i],c[i],d[i]); i = 1,..,n , i.e. 0:(*n-1)
+     */
+    const int n_1 = *n - 1;
     int i, j, k, l;
     double ul, dx, tmp;
 
     if (*method == 1 && *n > 1)
     {
-        dx = x[*n - 1] - x[0];
+        dx = x[n_1] - x[0];
         for (l = 0; l < *nu; l++)
         {
             v[l] = fmod(u[l] - x[0], dx);
@@ -401,7 +403,7 @@ void spline_eval(int *method, int *nu, double *u, double *v, int *n, double *x, 
     for (l = 0; l < *nu; l++)
     {
         ul = v[l];
-        if (ul < x[i] || x[i + 1] < ul)
+        if (ul < x[i] || (i < n_1 && x[i + 1] < ul))
         {
             i = 0;
             j = *n;
